[project]
name = "firebase-messaging"
version = "0.4.4"
description = "FCM/GCM push notification client"
authors = [{ name = "sdb9696", email = "sdb9696@users.noreply.github.com" }]
license =  { text="MIT" }
readme = "README.rst"
requires-python = ">=3.9.0"
dependencies = [
    "protobuf>=6.30.2,<8",
    "http-ece~=1.1.0",
    "cryptography>=2.5",
    "aiohttp>=3.9.3",
]

keywords = [
    "Firebase",
    "Firebase Cloud Messaging",
    "Google Cloud Messaging",
]

classifiers = [
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/sdb9696/firebase-messaging"
Repository = "https://github.com/sdb9696/firebase-messaging"
Documentation = "http://firebase-messaging.readthedocs.io/"
"Bug Tracker" = "https://github.com/sdb9696/firebase-messaging/issues"


[project.optional-dependencies]
docs = ["sphinx==7.1.2", "sphinx-rtd-theme~=1.3", "sphinx-autodoc-typehints~=1.24", "myst-parser"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/firebase_messaging",
  "/tests",
  "/docs",
  "/CHANGELOG.md",
]

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-cov",
    "async-timeout>=3.0.0",
    "pytest-socket~=0.7.0",
    "aioresponses~=0.7.6",
    "types-protobuf>=6.30.2,<8",
    "mypy~=1.0",
    "ruff>=0.6.8",
]

[tool.pytest.ini_options]
testpaths = "tests"
norecursedirs = ".git"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--disable-socket --allow-unix-socket"

[tool.coverage.run]
omit = [
    "firebase_messaging/proto/*",
    "firebase_messaging/decrypt.py*"
    ]


[tool.ruff]
target-version = "py39"
exclude = [
    "firebase_messaging/proto/*"
]
lint.select = [
  "E",  # pycodestyle
#  "D",  # pydocstyle
  "F",  # pyflakes
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "I",  # isort
  "S",  # bandit
]
lint.ignore = [
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "F401",
    "S101", # allow asserts
    "E501", # ignore line-too-longs
]
"docs/source/conf.py" = [
    "D100",
    "D103",
]

[tool.mypy]
# exclude pattern inside triple quotes should be synced to .pre-commit-config.yaml
exclude = '''(?x)(
          ^docs/.*|
          ^tests/.*|
          ^firebase_messaging/proto/.*py$
)'''
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "firebase_messaging.proto.*"
]
disallow_untyped_defs = false

[tool.doc8]
paths = ["docs"]
ignore = ["D001"]
ignore-path =  ["docs/build"]
